[package]
name = "vendeo-primitives"
version = "4.0.0-dev"
description = "FRAME pallet for defining vendeo primitives."
authors = ["RomainLLC <https://github.com/RomainLLC>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/RomainLLC/vendeo-chain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-application-crypto = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }


[features]
default = ["std"]
std = [
    'codec/std',
    'scale-info/std',
    'frame-system/std',
    'sp-application-crypto/std',
    'sp-core/std',
    'sp-runtime/std',
]

# try-runtime = ["frame-support/try-runtime"]
